# AWS-Sentinel

./: .gitignore  README.md  pyproject.toml  requirements.txt  sentinel.py
.github/workflows/: ci.yml
tests/: test_sentinel.py
