[project]
name = "aws-sentinel"
version = "1.0.0"
description = "Automated Security Compliance Auditor for AWS"
authors = [
    { name = "Melvin Jose C" }
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
